Bug 475502 - NeoChat crashes when accepting an already-accepted invitation
Summary: NeoChat crashes when accepting an already-accepted invitation
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.08.0
Platform: FreeBSD Ports FreeBSD
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: drkonqi
: 479671 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-12 07:09 UTC by Vidar Karlsen
Modified: 2024-01-12 14:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vidar Karlsen 2023-10-12 07:09:24 UTC
Application: neochat (23.08.0)

Qt Version: 5.15.8
Frameworks Version: 5.109.0
Operating System: FreeBSD 13.2-RELEASE-p2 amd64
Windowing System: X11
Distribution (Platform): FreeBSD Ports
DrKonqi: 5.27.7 [KCrashBackend]

-- Information about the crash:
I got an invitation to join a room, and I accepted this using my phone client.
I later saw the pop-up for the same invitation in NeoChat, and I clicked accept to see what would happen and ... NeoChat crashed :D

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: NeoChat (neochat), signal: Segmentation fault

(lldb) process attach --pid 76399
Process 76399 stopped
* thread #1, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c5581b8 libc.so.7`__sys_wait4 + 8
libc.so.7`__sys_wait4:
->  0x83c5581b8 <+8>:  syscall 
    0x83c5581ba <+10>: jb     0x83c554db8
    0x83c5581c0 <+16>: retq   
    0x83c5581c1:       int3   
  thread #2, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
libc.so.7`__sys_poll:
->  0x83c557f5a <+10>: jb     0x83c554db8
    0x83c557f60 <+16>: retq   
    0x83c557f61:       int3   
    0x83c557f62:       int3   
  thread #3, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
libc.so.7`__sys_poll:
->  0x83c557f5a <+10>: jb     0x83c554db8
    0x83c557f60 <+16>: retq   
    0x83c557f61:       int3   
    0x83c557f62:       int3   
  thread #4, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
libc.so.7`__sys_poll:
->  0x83c557f5a <+10>: jb     0x83c554db8
    0x83c557f60 <+16>: retq   
    0x83c557f61:       int3   
    0x83c557f62:       int3   
  thread #5, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
libc.so.7`__sys_poll:
->  0x83c557f5a <+10>: jb     0x83c554db8
    0x83c557f60 <+16>: retq   
    0x83c557f61:       int3   
    0x83c557f62:       int3   
  thread #6, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
libc.so.7`__sys_poll:
->  0x83c557f5a <+10>: jb     0x83c554db8
    0x83c557f60 <+16>: retq   
    0x83c557f61:       int3   
    0x83c557f62:       int3   
  thread #7, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557fda libc.so.7`__sys_read + 10
libc.so.7`__sys_read:
->  0x83c557fda <+10>: jb     0x83c554db8
    0x83c557fe0 <+16>: retq   
    0x83c557fe1:       int3   
    0x83c557fe2:       int3
Executable module set to "/usr/local/bin/neochat".
Architecture set to: x86_64-unknown-freebsd13.2.
(lldb) settings set term-width 200
(lldb) thread info
thread #1: tid = 1042883, 0x000000083c5581b8 libc.so.7`__sys_wait4 + 8, name = 'neochat', stop reason = signal SIGSTOP

(lldb) bt all
* thread #1, name = 'neochat', stop reason = signal SIGSTOP
  * frame #0: 0x000000083c5581b8 libc.so.7`__sys_wait4 + 8
    frame #1: 0x000000083e6d219c libthr.so.3`___lldb_unnamed_symbol722 + 60
    frame #2: 0x00000008470722fb libKF5Crash.so.5`___lldb_unnamed_symbol227 + 331
    frame #3: 0x0000000847071de9 libKF5Crash.so.5`KCrash::defaultCrashHandler(int) + 1145
    frame #4: 0x000000083e6cfb60 libthr.so.3`___lldb_unnamed_symbol679 + 208
    frame #5: 0x000000083e6cf11f libthr.so.3`___lldb_unnamed_symbol660 + 319
    frame #6: 0x00007ffffffff2d3 [vdso]
    frame #7: 0x000000000051f3b5 neochat`___lldb_unnamed_symbol3998 + 37
    frame #8: 0x000000000054d6e3 neochat`___lldb_unnamed_symbol4560 + 51
    frame #9: 0x000000083b2641a2 libQt5Core.so.5`___lldb_unnamed_symbol9626 + 1186
    frame #10: 0x00000008272f34e5 libKF5Notifications.so.5`KNotification::activate(unsigned int) + 149
    frame #11: 0x00000008272f8617 libKF5Notifications.so.5`___lldb_unnamed_symbol1467 + 391
    frame #12: 0x000000083b2641a2 libQt5Core.so.5`___lldb_unnamed_symbol9626 + 1186
    frame #13: 0x00000008273000aa libKF5Notifications.so.5`KNotificationPlugin::actionInvoked(int, int) + 74
    frame #14: 0x000000082730e469 libKF5Notifications.so.5`___lldb_unnamed_symbol1717 + 985
    frame #15: 0x000000083b2641a2 libQt5Core.so.5`___lldb_unnamed_symbol9626 + 1186
    frame #16: 0x0000000827319ff8 libKF5Notifications.so.5`___lldb_unnamed_symbol1894 + 136
    frame #17: 0x000000082731a5ed libKF5Notifications.so.5`___lldb_unnamed_symbol1901 + 125
    frame #18: 0x000000083907821f libQt5DBus.so.5`___lldb_unnamed_symbol1360 + 2543
    frame #19: 0x000000083b258a9d libQt5Core.so.5`QObject::event(QEvent*) + 765
    frame #20: 0x000000083869bcc9 libQt5Widgets.so.5`QApplicationPrivate::notify_helper(QObject*, QEvent*) + 265
    frame #21: 0x000000083869d0a0 libQt5Widgets.so.5`QApplication::notify(QObject*, QEvent*) + 528
    frame #22: 0x000000083b22fa20 libQt5Core.so.5`QCoreApplication::notifyInternal2(QObject*, QEvent*) + 176
    frame #23: 0x000000083b230995 libQt5Core.so.5`QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 485
    frame #24: 0x000000083b285c08 libQt5Core.so.5`___lldb_unnamed_symbol9874 + 24
    frame #25: 0x0000000843b3ccf4 libglib-2.0.so.0`g_main_context_dispatch + 436
    frame #26: 0x0000000843b3d02c libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 460
    frame #27: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #28: 0x000000083b285650 libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 96
    frame #29: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #30: 0x000000083b2300be libQt5Core.so.5`QCoreApplication::exec() + 142
    frame #31: 0x00000000002e3e4a neochat`___lldb_unnamed_symbol2596 + 9738
    frame #32: 0x00000000002e1650 neochat`___lldb_unnamed_symbol8073 + 256
  thread #2, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
    frame #1: 0x000000083e6d1d36 libthr.so.3`___lldb_unnamed_symbol711 + 54
    frame #2: 0x0000000843b3cfd5 libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 373
    frame #3: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #4: 0x000000083b28566b libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 123
    frame #5: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #6: 0x000000083b06f1d4 libQt5Core.so.5`QThread::exec() + 164
    frame #7: 0x000000083906fc83 libQt5DBus.so.5`___lldb_unnamed_symbol1318 + 19
    frame #8: 0x000000083b0702e8 libQt5Core.so.5`___lldb_unnamed_symbol7206 + 232
    frame #9: 0x000000083e6c6a7a libthr.so.3`___lldb_unnamed_symbol556 + 314
  thread #3, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
    frame #1: 0x000000083e6d1d36 libthr.so.3`___lldb_unnamed_symbol711 + 54
    frame #2: 0x0000000843b3cfd5 libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 373
    frame #3: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #4: 0x000000083b28566b libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 123
    frame #5: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #6: 0x000000083b06f1d4 libQt5Core.so.5`QThread::exec() + 164
    frame #7: 0x0000000825a6f479 libQt5Qml.so.5`___lldb_unnamed_symbol10789 + 57
    frame #8: 0x000000083b0702e8 libQt5Core.so.5`___lldb_unnamed_symbol7206 + 232
    frame #9: 0x000000083e6c6a7a libthr.so.3`___lldb_unnamed_symbol556 + 314
  thread #4, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
    frame #1: 0x000000083e6d1d36 libthr.so.3`___lldb_unnamed_symbol711 + 54
    frame #2: 0x0000000843b3cfd5 libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 373
    frame #3: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #4: 0x000000083b28566b libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 123
    frame #5: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #6: 0x000000083b06f1d4 libQt5Core.so.5`QThread::exec() + 164
    frame #7: 0x000000083b0702e8 libQt5Core.so.5`___lldb_unnamed_symbol7206 + 232
    frame #8: 0x000000083e6c6a7a libthr.so.3`___lldb_unnamed_symbol556 + 314
  thread #5, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
    frame #1: 0x000000083e6d1d36 libthr.so.3`___lldb_unnamed_symbol711 + 54
    frame #2: 0x0000000843b3cfd5 libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 373
    frame #3: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #4: 0x000000083b28566b libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 123
    frame #5: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #6: 0x000000083b06f1d4 libQt5Core.so.5`QThread::exec() + 164
    frame #7: 0x000000083b0702e8 libQt5Core.so.5`___lldb_unnamed_symbol7206 + 232
    frame #8: 0x000000083e6c6a7a libthr.so.3`___lldb_unnamed_symbol556 + 314
  thread #6, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557f5a libc.so.7`__sys_poll + 10
    frame #1: 0x000000083e6d1d36 libthr.so.3`___lldb_unnamed_symbol711 + 54
    frame #2: 0x0000000843b3cfd5 libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 373
    frame #3: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #4: 0x000000083b28566b libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 123
    frame #5: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #6: 0x000000083b06f1d4 libQt5Core.so.5`QThread::exec() + 164
    frame #7: 0x000000082683c2ce libQt5Quick.so.5`___lldb_unnamed_symbol11341 + 318
    frame #8: 0x000000083b0702e8 libQt5Core.so.5`___lldb_unnamed_symbol7206 + 232
    frame #9: 0x000000083e6c6a7a libthr.so.3`___lldb_unnamed_symbol556 + 314
  thread #7, name = 'neochat', stop reason = signal SIGSTOP
    frame #0: 0x000000083c557fda libc.so.7`__sys_read + 10
    frame #1: 0x000000083e6d1e16 libthr.so.3`___lldb_unnamed_symbol713 + 54
    frame #2: 0x0000000843b932df libglib-2.0.so.0`___lldb_unnamed_symbol2737 + 95
    frame #3: 0x0000000843b3c7f4 libglib-2.0.so.0`g_main_context_check + 228
    frame #4: 0x0000000843b3d01b libglib-2.0.so.0`___lldb_unnamed_symbol2488 + 443
    frame #5: 0x0000000843b3d0d8 libglib-2.0.so.0`g_main_context_iteration + 104
    frame #6: 0x000000083b28566b libQt5Core.so.5`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 123
    frame #7: 0x000000083b22c336 libQt5Core.so.5`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 566
    frame #8: 0x000000083b06f1d4 libQt5Core.so.5`QThread::exec() + 164
    frame #9: 0x000000083b0702e8 libQt5Core.so.5`___lldb_unnamed_symbol7206 + 232
    frame #10: 0x000000083e6c6a7a libthr.so.3`___lldb_unnamed_symbol556 + 314

Reported using DrKonqi
Comment 1 Vidar Karlsen 2023-10-12 07:15:17 UTC
Furthermore, the NeoChat window has now been hanging for 5 minutes saying "Submitting bug report..."
I don't know if that's an issue with NeoChat or the crash handler, but I thought I'd mention it.
Comment 2 Bug Janitor Service 2024-01-01 16:52:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1501
Comment 3 Tobias Fella 2024-01-05 14:12:14 UTC
Git commit 4a809d57f7814e2e5f76d8453ba5d9518ca5420e by Tobias Fella.
Committed on 05/01/2024 at 14:16.
Pushed by tfella into branch 'master'.

Fix crash when accepting/declining already accepted/declined invite

M  +5    -1    src/notificationsmanager.cpp

https://invent.kde.org/network/neochat/-/commit/4a809d57f7814e2e5f76d8453ba5d9518ca5420e
Comment 4 Tobias Fella 2024-01-12 14:00:33 UTC
*** Bug 479671 has been marked as a duplicate of this bug. ***