Fix crash when accepting/declining already accepted/declined invite

BUG: 475502